fix(systemaddon): Use flex-wrap to force a new line for small width. Closes #3630.

--- a/system-addon/content-src/components/ManualMigration/_ManualMigration.scss
+++ b/system-addon/content-src/components/ManualMigration/_ManualMigration.scss
@@ -44,6 +44,7 @@
   button {
     align-self: center;
     height: 26px;
+    margin: 0;
     margin-inline-start: 20px;
     padding: 0 12px;
   }
